--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,12 +16,14 @@ logging:
     root: info
 
 spring.datasource:
-  username: TEAM
+  username: TEAM01
   password: 111111
   driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-  url: jdbc:log4jdbc:oracle:thin:@localhost:1521/xe
+  url: jdbc:log4jdbc:oracle:thin:@49.50.174.248:1521/xe
 
 # mybatis framework setting
 mybatis:
   type-aliases-package: com.kbstar.dto
   mapper-locations: /mybatis/*.xml
+  configuration:
+    map_underscore_to_camel_case: true
