회원 로그인 구현(단, 패스워드 틀릴 경우 예외처리 진행 예정)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring.datasource:
 
 # mybatis framework setting
 mybatis:
-  type-aliases-package: com.kbstar.dto
+  type-aliases-package: com.example.demo.dto
   mapper-locations: /mybatis/*.xml
   configuration:
     map_underscore_to_camel_case: true
